--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -99,6 +99,7 @@ jobs:
         with:
           python-version: "3.10"
           cache: pip
+      - uses: ilammy/msvc-dev-cmd@ed94116c4d30d2091601b81f339a2eaa1c2ba0a6 # v1.4.1
       - name: Install NNCF and test requirements
         run: |
           pip install -e .
