--- a/tests/post_training/data/ptq_reference_data.yaml
+++ b/tests/post_training/data/ptq_reference_data.yaml
@@ -102,6 +102,18 @@ torchvision/swin_v2_s_backend_CUDA_FX_TORCH:
     type: "OpConversionFailure"
     error_message: "Check 'is_conversion_successful' failed at src/frontends/pytorch/src/frontend.cpp:171:\nFrontEnd API failed with OpConversionFailure:\nModel wasn't fully converted.\nSummary:\n-- No conversion rule found for operations: aten.adaptive_avg_pool2d.default, aten.conv2d.default, aten.layer_norm.default, aten.linear.default, aten.matmul.default, aten.pad.default, aten.softmax.int, aten.where.ScalarSelf\n"
     message: "Issue-162009"
+ultralytics/yolov8n_backend_FP32:
+  metric_value: 0.6056
+ultralytics/yolov8n_backend_FX_TORCH:
+  metric_value: 0.61417
+ultralytics/yolov8n_backend_OV:
+  metric_value: 0.6188
+ultralytics/yolo11n_backend_FP32:
+  metric_value: 0.6770
+ultralytics/yolo11n_backend_FX_TORCH:
+  metric_value: 0.6735
+ultralytics/yolo11n_backend_OV:
+  metric_value: 0.6752
 timm/crossvit_9_240_backend_CUDA_TORCH:
   metric_value: 0.7275
 timm/crossvit_9_240_backend_FP32:
