--- a/tests/post_training/requirements.txt
+++ b/tests/post_training/requirements.txt
@@ -21,3 +21,4 @@ accelerate==1.1.0
 transformers==4.48.3
 whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai.git@2025.0.0.0#subdirectory=tools/who_what_benchmark
 datasets==3.1.0
+ultralytics==8.3.27
