--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "scipy>=1.3.2",
     "tabulate>=0.9.0",
     "tqdm>=4.54.1",
+    "safetensors"
 ]
 
 [project.optional-dependencies]
