--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -124,4 +124,5 @@ jobs:
       - name: Test Summary
         if: ${{ !cancelled() }}
         run: |
+            pip install defusedxml==0.7.1
             python .github/scripts/pytest_md_summary.py pytest-results.xml >> $GITHUB_STEP_SUMMARY
