--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,3 +154,10 @@ notice-rgx = """\
 
 [tool.pytest.ini_options]
 pythonpath = "."
+
+[tool.bandit]
+exclude_dirs = ["tools", "tests", "**/venv*", "build"]
+skips = [
+    "B101",   # assert_used
+    "B404" ,  # import_subprocess
+]
