--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -5,13 +5,18 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 0'
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
 
 jobs:
   precommit:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ["3.9", "3.11", "3.12"]
+        python_version: ["3.9", "3.11", "3.12", "3.13"]
     uses: ./.github/workflows/call_precommit.yml
     with:
       python_version: ${{ matrix.python_version }}
