--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ files = [
     "nncf/common/utils/",
     "nncf/common/tensor_statistics",
     "nncf/experimental/torch2",
+    "nncf/telemetry/",
 ]
 
 [tool.ruff]
