--- a/.github/workflows/call_precommit.yml
+++ b/.github/workflows/call_precommit.yml
@@ -150,6 +150,7 @@ jobs:
       - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
         with:
           python-version: ${{ inputs.python_version }}
+          cache: pip
       - name: Install NNCF and test requirements
         run: make install-torch-test
       - name: Print installed modules
