--- a/.github/workflows/build_html_doc.yml
+++ b/.github/workflows/build_html_doc.yml
@@ -9,6 +9,7 @@ on:
         type: string
 jobs:
   build-html:
+    timeout-minutes: 10
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
