--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -2,17 +2,17 @@ name: MacOS
 permissions: read-all
 
 on:
+  workflow_call:
   workflow_dispatch:
     inputs:
       pull_request_number:
         description: 'The pull request number'
         default: ''
-  schedule:
-    - cron: '0 0 * * 0'
 
 jobs:
   precommit-common:
     runs-on: macos-14
+    timeout-minutes: 40
     steps:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
         with:
@@ -38,6 +38,7 @@ jobs:
 
   precommit-openvino:
     runs-on: macos-14
+    timeout-minutes: 40
     steps:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
         with:
