--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   precommit:
+    if: github.repository_owner == 'openvinotoolkit'
     strategy:
       fail-fast: false
       matrix:
