--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,8 +107,10 @@ files = [
     "nncf/common/stateful_classes_registry.py",
     "nncf/common/strip.py",
     "nncf/common/tensor.py",
+    "nncf/common/collector.py",
     "nncf/common/accuracy_aware_training",
     "nncf/common/graph",
+    "nncf/common/initialization",
     "nncf/common/sparsity",
     "nncf/common/tensor_statistics",
     "nncf/common/utils",
