Remove tqdm from dependencies (#3168)
### Changes

Remove tqdm from dependencies

### Reason for changes

https://github.com/openvinotoolkit/nncf/pull/2162

Not used in nncf, rich used instead

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,11 +46,10 @@ dependencies = [
     "pydot>=1.4.1, <3.0.0",
     "pymoo>=0.6.0.1",
     "rich>=13.5.2",
+    "safetensors>=0.4.1",
     "scikit-learn>=0.24.0",
     "scipy>=1.3.2",
     "tabulate>=0.9.0",
-    "tqdm>=4.54.1",
-    "safetensors>=0.4.1"
 ]
 
 [project.optional-dependencies]
