--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,7 @@ strict = true
 # https://github.com/hauntsaninja/no_implicit_optional
 implicit_optional = true
 files = [
+    "nncf/data",
     "nncf/common/sparsity",
     "nncf/common/graph",
     "nncf/common/accuracy_aware_training/",
