--- a/.github/workflows/conformance_weight_compression.yml
+++ b/.github/workflows/conformance_weight_compression.yml
@@ -15,8 +15,9 @@ on:
 
 jobs:
   examples-cpu:
-    name: Weight compression [${{ matrix.group }}/2]
+    name: Weight compression [${{ matrix.group }}/3]
     runs-on: ubuntu-22.04-16-cores
+    timeout-minutes: 40
     strategy:
       fail-fast: false
       matrix:
