[GHA] conformance test for weight compression (#3032)
### Changes

Add action for weight compression tests
Increased atol from 10e-5 to 10e-4 to avoid fails in differ cpu
Set ONEDNN_MAX_CPU_ISA = "AVX2" for test

Trigger on:
- call in [nightly
scope](https://github.com/openvinotoolkit/nncf/actions/workflows/nightly.yml)
- manual with parameters: pr nummer, pytest args


Fixed `pytest_md_summary.py` to show xfail status

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -30,11 +30,11 @@ jobs:
           python-version: 3.10.14
           cache: pip
       - name: Install NNCF and test requirements
-        run: |
-          pip install -e .
-          pip install -r tests/tensorflow/requirements.txt
+        run: pip install -e . -r tests/tensorflow/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Run TensorFlow precommit
         run:  pytest tests/tensorflow -m 'nightly'
 
+  weight-compression:
+    uses: ./.github/workflows/conformance_weight_compression.yml
