[GHA] trigger for scheduled jobs (#3169)
### Changes

- Call scheduled jobs from nightly and weekly actions
- Set timeout for some jobs
- Disable scheduled jobs for forks

### Related tickets

155528

### Tests

nightly -
https://github.com/openvinotoolkit/nncf/actions/runs/12522007368
weekly -
https://github.com/openvinotoolkit/nncf/actions/runs/12522007372

--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   precommit:
+    if: github.repository_owner == 'openvinotoolkit'
     strategy:
       fail-fast: false
       matrix:
@@ -16,3 +17,7 @@ jobs:
     with:
       python_version: ${{ matrix.python_version }}
       gpu_enabled: false
+
+  macos:
+    if: github.repository_owner == 'openvinotoolkit'
+    uses: ./.github/workflows/macos.yml
