[mypy] nncf/data (#3173)
### Changes

Enable mypy check for `nncf/data` 
Removed `Generic[DataItem, ModelInput]` for `nncf.Dataset`, to simplify
using class

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,7 @@ strict = true
 implicit_optional = true
 files = [
     "nncf/api",
+    "nncf/data",
     "nncf/common/collector.py",
     "nncf/common/engine.py",
     "nncf/common/hook_handle.py",
