--- a/tests/post_training/data/wc_reference_data.yaml
+++ b/tests/post_training/data/wc_reference_data.yaml
@@ -6,6 +6,10 @@ tinyllama_data_aware_backend_OV:
   metric_value: 0.85767
   num_int4: 94
   num_int8: 124
+tinyllama_data_aware_backend_TORCH:
+  metric_value: 0.85767
+  num_int4: 94
+  num_int8: 124
 tinyllama_data_aware_awq_stateful_backend_OV:
   metric_value: 0.85616
   num_int4: 94
@@ -28,6 +32,10 @@ tinyllama_data_aware_gptq_scale_estimation_stateful_backend_OV:
   num_int8: 124
   metrics_xfail_reason: "Issue-148819"
 tinyllama_scale_estimation_per_channel_backend_OV:
+  metric_value: 0.81389
+  num_int4: 188
+  num_int8: 124
+tinyllama_scale_estimation_per_channel_backend_TORCH:
   metric_value: 0.81389
   num_int4: 188
   num_int8: 124
